Prevent page jumps when rates load

--- a/microservices/www2/src/components/MortgageRateCarousel/MortgageRateCarousel.scss
+++ b/microservices/www2/src/components/MortgageRateCarousel/MortgageRateCarousel.scss
@@ -36,6 +36,7 @@
   .content {
     align-self: center;
     color: black;
+    height: 110px;
 
     .percent {
       font-size: 4em;
